Fix clipping

--- a/sass/rahix.scss
+++ b/sass/rahix.scss
@@ -114,6 +114,8 @@ footer a.rx-icon-link {
 }
 
 #content-div {
+    max-width: 90%;
+
     .card a.rx-page-link {
         color: $text;
     }
